# image_enhancer

./: CMakeLists.txt  README.md
auxiliary/: convert_png_to_txt.py  convert_txt_to_png.py
include/: Image.hpp  ImageFilter.hpp  ImageReader.hpp  SauvolaFilter.hpp
proofOfConcept/: imageReader.py  main.py
proofOfConcept/filters/: SauvolaFilter.py  binaryFilter.py  equalizeFilter.py  imageFilter.py
src/: Image.cpp  ImageFilter.cpp  ImageReader.cpp  SauvolaFilter.cpp
tests/: CMakeLists.txt  main_test.cpp
